# internal/handler/dto/auth.go
@@ -19,3 +19,24 @@ type LoginRequest struct {
 type LoginResponse struct {
 	Token string `json:"token"`
 }
+
+type UserMeResponse struct {
+	Email       string `json:"email"`
+	FullName    string `json:"full_name"`
+	PhoneNumber string `json:"phone_number"`
+	Address     string `json:"address"`
+	Province    string `json:"province"`
+	City        string `json:"city"`
+	PostalCode  string `json:"postal_code"`
+}
+
+type ForgotPasswordRequest struct {
+	Email string `json:"email" validate:"required,custom_email"`
+}
+
+type ResetPasswordRequest struct {
+	Email           string `json:"email" validate:"required,custom_email"`
+	Token           string `json:"token" validate:"required,hexadecimal,len=64"`
+	NewPassword     string `json:"new_password" validate:"required,secure_password"`
+	ConfirmPassword string `json:"confirm_password" validate:"required,eqfield=NewPassword"`
+}
